# proper-sort

./: Cargo.toml  LICENSE  README.md
.zed/: debug.json
examples/: example.rs
src/: error.rs  lib.rs
